# quant-trading

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  _test_pred.rs  dev.ps1  docker-compose.yml  retrain_stdout.txt  server_stderr.txt  start.ps1
.claude/: settings.local.json
.github/agents/: backend.md  deploy.md  frontend.md
.github/workflows/: ci.yml
config/: default.toml  production.toml
crates/api/: Cargo.toml
crates/api/src/: auth.rs  handlers.rs  lib.rs  log_store.rs  routes.rs  state.rs  task_store.rs  ws.rs
crates/api/src/handlers/: attribution.rs  backtest.rs  data_adjust.rs  data_quality.rs  export.rs  factor.rs  latency.rs  llm_training.rs  market.rs  metrics.rs  ml.rs  mod.rs  monte_carlo.rs  notification.rs  optimize.rs  reports.rs  risk_metrics.rs  services.rs  tasks.rs  trade.rs
crates/backtest/: Cargo.toml
crates/backtest/src/: engine.rs  lib.rs  matching.rs  metrics.rs  report.rs  walk_forward.rs
crates/broker/: Cargo.toml
crates/broker/src/: data_actors.rs  engine.rs  journal.rs  lib.rs  live.rs  notifier.rs  orders.rs  paper.rs  qmt.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  models.rs  traits.rs  types.rs  utils.rs
crates/data/: Cargo.toml
crates/data/src/: akshare.rs  lib.rs  news.rs  provider.rs  storage.rs  tushare.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  context.rs  history.rs  lib.rs  sentiment.rs  tools.rs
crates/ml/: Cargo.toml
crates/ml/src/: dl_models.rs  fast_factors.rs  lib.rs  llm_strategy.rs  ml_factor.rs  onnx_inference.rs
crates/risk/: Cargo.toml
crates/risk/src/: checks.rs  enforcement.rs  lib.rs  position.rs  pure_checks.rs  rules.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: builtin.rs  collector.rs  composite.rs  engine.rs  factory.rs  fast_factors.rs  indicators.rs  lgb_inference.rs  lib.rs  ml_factor.rs  screener.rs  sentiment.rs  signals.rs
data/: azure-vm-info.json  composite_strategy.json  notification_config.json  notifications.db  strategy_config.json  trade_journal.db  training_history.db
migrations/: 20260214000001_create_market_data.sql  20260214000002_create_trading.sql  20260214000003_create_backtest.sql  20260214000004_create_chat.sql  20260220000005_create_journal_notifications_ticks.sql  20260227000006_create_event_logs.sql
ml_models/: auto_retrain.py  data_utils.py  dl_factor_mining.py  factor_correlation.py  factor_ic_decay.py  factor_mining.py  factor_mining_report_20260219_214741.json  factor_mining_report_20260219_214919.json  factor_mining_report_20260219_220803.json  factor_mining_report_20260219_220822.json  factor_mining_report_20260219_221733.json  factor_mining_report_20260219_221811.json  factor_mining_report_20260220_120252.json  factor_mining_report_20260220_120633.json  factor_mining_report_20260220_124640.json  factor_mining_report_20260220_132910.json  factor_mining_report_20260220_133221.json  factor_mining_report_20260220_140257.json  factor_mining_report_20260220_141607.json  factor_model.lgb.txt  factor_model.model  factor_model_20260216_133630.model  factor_model_20260216_140339.model  factor_model_20260216_143030.model  factor_model_20260216_144143.model  factor_model_20260225_203205.model  factor_model_features.txt  gp_factor_features.txt  gp_factor_mining.py  gp_factors_data_20260220_111703.csv  gp_factors_data_20260220_120255.csv  gp_factors_data_20260220_120628.csv  gp_factors_data_20260220_133223.csv  gp_factors_data_20260220_143238.csv  gp_factors_rust_snippet.rs  llm_dataset_export.py  llm_dpo_train.py  llm_sft_train.py  llm_signal_serve.py  manual_factor_eval.py  (+29 more)
qmt_bridge/: README.md  qmt_bridge.py  requirements.txt
scripts/: data_source_config.py  deploy-azure.ps1  deploy-azure.sh  docker-entrypoint.sh  fetch_klines.py  l2_recorder.py  market_cache.py  market_data.py  market_data_server.py  refresh-deploy.ps1  tushare_provider.py  yfinance_provider.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: api.spec.ts  app.spec.ts  workflows.spec.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: Layout.tsx  Sidebar.tsx  TaskPipeline.tsx  WorkflowHint.tsx
web/src/contexts/: MarketContext.tsx
web/src/hooks/: useTaskManager.ts  useTaskPoller.ts
web/src/pages/: AutoTrade.tsx  Backtest.tsx  Chat.tsx  DLModels.tsx  Dashboard.tsx  DataQuality.tsx  FactorMining.tsx  History.tsx  LLMTraining.tsx  Latency.tsx  Logs.tsx  MarketData.tsx  Metrics.tsx  Notifications.tsx  Pipeline.tsx  Portfolio.tsx  Reports.tsx  RiskManagement.tsx  Screener.tsx  Sentiment.tsx  Services.tsx  StrategyConfig.tsx
web/src/pages/factor-mining/: CorrelationTab.tsx  DataSourceConfig.tsx  ExportTab.tsx  GPTab.tsx  IcDecayTab.tsx  ManualTab.tsx  OverviewTab.tsx  ParametricTab.tsx  RegistryTab.tsx  index.tsx
web/src/types/: index.ts
