[package]
name = "quant-backtest"
version.workspace = true
edition.workspace = true

[dependencies]
quant-core = { workspace = true }
quant-strategy = { workspace = true }
quant-data = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
