[package]
name = "quant-broker"
version.workspace = true
edition.workspace = true

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("email"))'] }

[dependencies]
quant-core = { workspace = true }
quant-risk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
futures = { workspace = true }
base64 = "0.22"
