[package]
name = "quant-core"
version.workspace = true
edition.workspace = true

[dependencies]
quant-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
