[package]
name = "quant-strategy"
version.workspace = true
edition.workspace = true

[features]
default = []
onnx = ["dep:ort", "dep:ndarray"]

[dependencies]
quant-core = { workspace = true }
quant-config = { workspace = true }
quant-data = { workspace = true }
quant-llm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
ort = { version = "2.0.0-rc.11", features = ["ndarray"], optional = true }
ndarray = { version = "0.17", optional = true }
