[package]
name = "quant-strategy"
version.workspace = true
edition.workspace = true

[features]
default = ["collector"]
collector = ["dep:quant-data", "dep:quant-llm", "dep:quant-config"]

[dependencies]
quant-core = { workspace = true }
quant-config = { workspace = true, optional = true }
quant-ml = { workspace = true }
quant-data = { workspace = true, optional = true }
quant-llm = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
